# mkposters

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: release.yml  run_tests.yml
examples/diffrax/: poster.md
mkposters/: __init__.py  __main__.py  _mkposter.py  _post_install.py  custom.scss  join_style.scss  mkposter.py  post_install.py  style.css  style.scss
mkposters/stylesheets/: README.md  custom.scss  main.scss  material-color.scss
tests/: test_example.py
